--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "tailwindcss": "^1.8.10",
     "vue": "^2.6.11",
+    "vue-content-placeholders": "^0.2.1",
     "vue-router": "^3.2.0",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuex": "^3.4.0"
